Bug 173113 - mismatching allocation and deallocation
Summary: mismatching allocation and deallocation
Status: RESOLVED FIXED
Alias: None
Product: kinfocenter
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Helge Deller
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-10-18 19:59 UTC by Daniel Marjamäki
Modified: 2009-04-11 01:23 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Daniel Marjamäki 2008-10-18 19:59:28 UTC
Version:            (using Devel)
OS:                Linux
Installed from:    Compiled sources

File:
kdebase/apps/kinfocenter/base/info_fbsd.cpp

on line 75, buf is allocated
	buf = new char[len];

on line 92, buf is deallocated
	delete buf;
Comment 1 Bill Egert 2009-04-04 23:40:02 UTC
should be "delete[] buf;"
Comment 2 Dario Andres 2009-04-11 01:00:57 UTC
SVN commit 952109 by darioandres:

Proper deletion of char[]

BUG: 173113


 M  +1 -1      info_fbsd.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=952109
Comment 3 Dario Andres 2009-04-11 01:05:31 UTC
SVN commit 952110 by darioandres:

Backport ot 4.2branch of:
SVN commit 952109 by darioandres:

Proper deletion of char[]

CCBUG: 173113


 M  +1 -1      info_fbsd.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=952110
Comment 4 Dario Andres 2009-04-11 01:21:26 UTC
SVN commit 952112 by darioandres:

Fixing my own error.

BUG: 173113


 M  +1 -1      info_fbsd.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=952112
Comment 5 Dario Andres 2009-04-11 01:23:08 UTC
SVN commit 952114 by darioandres:

Fixing my own error

CCBUG: 173113


 M  +1 -1      info_fbsd.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=952114