Fixing my own error.

BUG: 173113

svn path=/trunk/KDE/kdebase/apps/kinfocenter/base/; revision=952112